<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Abb_Title_Resolution">Resolution</string>
    <string name="Abb_Title_badge_labs">LABS</string>
    <string name="COLOR_TUNE_CUSTOM">Manual</string>
    <string name="F_AUTOFOCUS">Auto focus</string>
    <string name="F_AUTO_FLASH">Auto</string>
    <string name="F_MANUALFOCUS">Manual focus</string>
    <string name="ISO_100">100</string>
    <string name="ISO_125">125</string>
    <string name="ISO_160">160</string>
    <string name="ISO_1600">1600</string>
    <string name="ISO_200">200</string>
    <string name="ISO_250">250</string>
    <string name="ISO_320">320</string>
    <string name="ISO_3200">3200</string>
    <string name="ISO_400">400</string>
    <string name="ISO_50">50</string>
    <string name="ISO_500">500</string>
    <string name="ISO_64">64</string>
    <string name="ISO_640">640</string>
    <string name="ISO_80">80</string>
    <string name="ISO_800">800</string>
    <string name="KELVIN_VALUE_10000K">10000K</string>
    <string name="KELVIN_VALUE_2300K">2300K</string>
    <string name="KELVIN_VALUE_2400K">2400K</string>
    <string name="KELVIN_VALUE_2500K">2500K</string>
    <string name="KELVIN_VALUE_2600K">2600K</string>
    <string name="KELVIN_VALUE_2700K">2700K</string>
    <string name="KELVIN_VALUE_2800K">2800K</string>
    <string name="KELVIN_VALUE_2900K">2900K</string>
    <string name="KELVIN_VALUE_3000K">3000K</string>
    <string name="KELVIN_VALUE_3100K">3100K</string>
    <string name="KELVIN_VALUE_3200K">3200K</string>
    <string name="KELVIN_VALUE_3300K">3300K</string>
    <string name="KELVIN_VALUE_3400K">3400K</string>
    <string name="KELVIN_VALUE_3500K">3500K</string>
    <string name="KELVIN_VALUE_3600K">3600K</string>
    <string name="KELVIN_VALUE_3700K">3700K</string>
    <string name="KELVIN_VALUE_3800K">3800K</string>
    <string name="KELVIN_VALUE_3900K">3900K</string>
    <string name="KELVIN_VALUE_4000K">4000K</string>
    <string name="KELVIN_VALUE_4100K">4100K</string>
    <string name="KELVIN_VALUE_4200K">4200K</string>
    <string name="KELVIN_VALUE_4300K">4300K</string>
    <string name="KELVIN_VALUE_4400K">4400K</string>
    <string name="KELVIN_VALUE_4500K">4500K</string>
    <string name="KELVIN_VALUE_4600K">4600K</string>
    <string name="KELVIN_VALUE_4700K">4700K</string>
    <string name="KELVIN_VALUE_4800K">4800K</string>
    <string name="KELVIN_VALUE_4900K">4900K</string>
    <string name="KELVIN_VALUE_5000K">5000K</string>
    <string name="KELVIN_VALUE_5100K">5100K</string>
    <string name="KELVIN_VALUE_5200K">5200K</string>
    <string name="KELVIN_VALUE_5300K">5300K</string>
    <string name="KELVIN_VALUE_5400K">5400K</string>
    <string name="KELVIN_VALUE_5500K">5500K</string>
    <string name="KELVIN_VALUE_5600K">5600K</string>
    <string name="KELVIN_VALUE_5700K">5700K</string>
    <string name="KELVIN_VALUE_5800K">5800K</string>
    <string name="KELVIN_VALUE_5900K">5900K</string>
    <string name="KELVIN_VALUE_6000K">6000K</string>
    <string name="KELVIN_VALUE_6100K">6100K</string>
    <string name="KELVIN_VALUE_6200K">6200K</string>
    <string name="KELVIN_VALUE_6300K">6300K</string>
    <string name="KELVIN_VALUE_6400K">6400K</string>
    <string name="KELVIN_VALUE_6500K">6500K</string>
    <string name="KELVIN_VALUE_6600K">6600K</string>
    <string name="KELVIN_VALUE_6700K">6700K</string>
    <string name="KELVIN_VALUE_6800K">6800K</string>
    <string name="KELVIN_VALUE_6900K">6900K</string>
    <string name="KELVIN_VALUE_7000K">7000K</string>
    <string name="KELVIN_VALUE_7100K">7100K</string>
    <string name="KELVIN_VALUE_7200K">7200K</string>
    <string name="KELVIN_VALUE_7300K">7300K</string>
    <string name="KELVIN_VALUE_7400K">7400K</string>
    <string name="KELVIN_VALUE_7500K">7500K</string>
    <string name="KELVIN_VALUE_7600K">7600K</string>
    <string name="KELVIN_VALUE_7700K">7700K</string>
    <string name="KELVIN_VALUE_7800K">7800K</string>
    <string name="KELVIN_VALUE_7900K">7900K</string>
    <string name="KELVIN_VALUE_8000K">8000K</string>
    <string name="KELVIN_VALUE_8100K">8100K</string>
    <string name="KELVIN_VALUE_8200K">8200K</string>
    <string name="KELVIN_VALUE_8300K">8300K</string>
    <string name="KELVIN_VALUE_8400K">8400K</string>
    <string name="KELVIN_VALUE_8500K">8500K</string>
    <string name="KELVIN_VALUE_8600K">8600K</string>
    <string name="KELVIN_VALUE_8700K">8700K</string>
    <string name="KELVIN_VALUE_8800K">8800K</string>
    <string name="KELVIN_VALUE_8900K">8900K</string>
    <string name="KELVIN_VALUE_9000K">9000K</string>
    <string name="KELVIN_VALUE_9100K">9100K</string>
    <string name="KELVIN_VALUE_9200K">9200K</string>
    <string name="KELVIN_VALUE_9300K">9300K</string>
    <string name="KELVIN_VALUE_9400K">9400K</string>
    <string name="KELVIN_VALUE_9500K">9500K</string>
    <string name="KELVIN_VALUE_9600K">9600K</string>
    <string name="KELVIN_VALUE_9700K">9700K</string>
    <string name="KELVIN_VALUE_9800K">9800K</string>
    <string name="KELVIN_VALUE_9900K">9900K</string>
    <string name="MF_0_0">0.0</string>
    <string name="MF_0_1">0.1</string>
    <string name="MF_0_2">0.2</string>
    <string name="MF_0_3">0.3</string>
    <string name="MF_0_4">0.4</string>
    <string name="MF_0_5">0.5</string>
    <string name="MF_0_6">0.6</string>
    <string name="MF_0_7">0.7</string>
    <string name="MF_0_8">0.8</string>
    <string name="MF_0_9">0.9</string>
    <string name="MF_1_0">1.0</string>
    <string name="Title_Watermark">Watermark</string>
    <string name="dep_empty">dep_empty</string>
    <string name="key_watermark_frame_color">watermark_frame_color</string>
    <string name="key_watermark_frame_style">watermark_frame_style</string>
    <string name="watermark_frame_color">Frame color</string>
    <string name="watermark_limitation_info">"This type of watermark doesn't support panoramas or high resolution photos."</string>
    <string name="watermark_style">Style</string>
    <string name="camera_advanced_settings">Camera Advanced Settings</string>
    <string name="cap_is_action_shot_supported">Action Shot Supported</string>
    <string name="cap_is_advanced_zero_shutter_lag_supported">Advanced Zero Shutter Lag Supported</string>
    <string name="cap_is_ae_af_lock_supported">AE/AF Lock Supported</string>
    <string name="cap_is_af_supported">AF Supported</string>
    <string name="cap_is_anamorphic_lens_preview_supported">Anamorphic Lens Preview Supported</string>
    <string name="cap_is_auto_framing_supported">Auto Framing Supported</string>
    <string name="cap_is_beauty_face_supported">Beauty Face Supported</string>
    <string name="cap_is_beauty_in_hal_face_detection_supported">Beauty In HAL Face Detection Supported</string>
    <string name="cap_is_beauty_in_hal_face_detection_tracking_supported">Beauty In HAL Face Detection Tracking Supported</string>
    <string name="cap_is_beauty_in_hal_supported">Beauty In HAL Supported</string>
    <string name="cap_is_bokeh_lighting_supported">Bokeh Lighting Supported</string>
    <string name="cap_is_bokeh_night_supported">Bokeh Night Supported</string>
    <string name="cap_is_bokeh_special_effect_supported">Bokeh Special Effect Supported</string>
    <string name="cap_is_bokeh_supported">Bokeh Supported</string>
    <string name="cap_is_caf_supported">CAF Supported</string>
    <string name="cap_is_color_space_mode_display_p3_supported">Color Space Mode Display P3 Supported</string>
    <string name="cap_is_composition_guide_supported">Composition Guide Supported</string>
    <string name="cap_is_depth_supported">Depth Supported</string>
    <string name="cap_is_document_detection_in_hal_supported">Document Detection In HAL Supported</string>
    <string name="cap_is_dynamic_fov_supported">Dynamic FOV Supported</string>
    <string name="cap_is_dynamic_shot_info_supported">Dynamic Shot Info Supported</string>
    <string name="cap_is_editable_portrait_video_supported">Editable Portrait Video Supported</string>
    <string name="cap_is_event_finder_supported">Event Finder Supported</string>
    <string name="cap_is_face_detection_full_mode_supported">Face Detection Full Mode Supported</string>
    <string name="cap_is_face_detection_supported">Face Detection Supported</string>
    <string name="cap_is_focus_enhancer_supported">Focus Enhancer Supported</string>
    <string name="cap_is_front_photo_night_mode_supported">Front Photo Night Mode Supported</string>
    <string name="cap_is_fusion_high_resolution_supported">Fusion High Resolution Supported</string>
    <string name="cap_is_hyperlapse_astrography_supported">Hyperlapse Astrography Supported</string>
    <string name="cap_is_hyperlapse_trail_mode_supported">Hyperlapse Trail Mode Supported</string>
    <string name="cap_is_lens_distortion_correction_supported">Lens Distortion Correction Supported</string>
    <string name="cap_is_live_hdr_supported">Live HDR Supported</string>
    <string name="cap_is_log_video_supported">Log Video Supported</string>
    <string name="cap_is_multi_af_supported">Multi AF Supported</string>
    <string name="cap_is_night_screen_flash_supported">Night Screen Flash Supported</string>
    <string name="cap_is_object_detector_supported">Object Detector Supported</string>
    <string name="cap_is_pet_detection_supported">Pet Detection Supported</string>
    <string name="cap_is_phase_af_supported">Phase AF Supported</string>
    <string name="cap_is_photo_palm_gesture_detection_supported">Photo Palm Gesture Detection Supported</string>
    <string name="cap_is_qr_code_detection_in_hal_supported">QR Code Detection In HAL Supported</string>
    <string name="cap_is_quick_take_recording_animation_callback_supported">Quick Take Recording Animation Callback Supported</string>
    <string name="cap_is_removing_record_surface_while_ssm_frc_supported">Removing Record Surface While SSM FRC Supported</string>
    <string name="cap_is_scene_optimizer_supported">Scene Optimizer Supported</string>
    <string name="cap_is_selfie_tone_mode_supported">Selfie Tone Mode Supported</string>
    <string name="cap_is_sensor_crop_supported">Sensor Crop Supported</string>
    <string name="cap_is_single_bokeh_in_hal_supported">Single Bokeh In HAL Supported</string>
    <string name="cap_is_slow_motion_resolution_supported">Slow Motion Resolution Supported</string>
    <string name="cap_is_smooth_zoom_supported">Smooth Zoom Supported</string>
    <string name="cap_is_sub_preview_callback_supported">Sub Preview Callback Supported</string>
    <string name="cap_is_super_slow_motion_gmc_supported">Super Slow Motion GMC Supported</string>
    <string name="cap_is_super_slow_motion_qfrc_supported">Super Slow Motion QFRC Supported</string>
    <string name="cap_is_super_slow_motion_supported">Super Slow Motion Supported</string>
    <string name="cap_is_sync_cancel_super_slow_motion_auto_detect_supported">Sync Cancel Super Slow Motion Auto Detect Supported</string>
    <string name="cap_is_touch_ae_supported">Touch AE Supported</string>
    <string name="cap_is_touch_af_supported">Touch AF Supported</string>
    <string name="cap_is_video_beauty_face_supported">Video Beauty Face Supported</string>
    <string name="cap_is_video_beauty_snapshot_supported">Video Beauty Snapshot Supported</string>
    <string name="cap_is_video_bokeh_effect_supported">Video Bokeh Effect Supported</string>
    <string name="cap_is_video_color_space_mode_display_p3_supported">Video Color Space Mode Display P3 Supported</string>
    <string name="cap_is_video_palm_gesture_detection_supported">Video Palm Gesture Detection Supported</string>
    <string name="cap_is_video_resolution_supported">Video Resolution Supported</string>
    <string name="cap_is_zoom_lock_supported">Zoom Lock Supported</string>
    <string name="cap_is_zsl_capture_supported">ZSL Capture Supported</string>
</resources>